--- a/sample_project/css/mystyle2.css
+++ b/sample_project/css/mystyle2.css
@@ -17,28 +17,28 @@ html,body,#landing{
   margin: 0;
   position: relative;
   background: url('../assets/bg.JPG');
-    background-image: norepeat;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .overlay{
   position: absolute;
   width: 100%;
-  height: inherit;
+  height: 100%;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.4);
 }
-
+.header{
+  width: 100%;
+  height: 95%;
+}
 .header h1 {
   font-size: 10rem;
 }
-
 .header h3 {
   font-size: 7rem;
-  margin-top: 420px;
+  margin-top: 30%;
 }
-
 .header h5 {
   font-size: 3.2rem;
 }
-
-
